<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/main_background"
    tools:context=".view.View.view.RegistrationPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:padding="8dp"
        android:text="@string/registration"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/event_24"/>
    </LinearLayout>


    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/number_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:hint="@string/enter_your_number"
        android:inputType="number"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/pass_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/con_pass_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:hint="@string/enter_confirm_password"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/submit_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/submit"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>