<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:background="@color/main_background"
    tools:context=".view.View.view.UserLoginActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/event_24"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="Email/Username"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="Password"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/pass_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/login_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/login"
            android:textAllCaps="false"/>
    </LinearLayout>

    <TextView
        android:id="@+id/registration_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="10dp"
        android:textSize="13sp"
        android:layout_marginTop="5dp"
        android:text="@string/i_have_no_account"
        android:textColor="@color/white"/>

</LinearLayout>