<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context=".view.View.view.UserDashboard">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5dp"
            android:src="@drawable/user_profile" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:text="@string/dashboard"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logout_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5dp"
            android:src="@drawable/logout" />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/carService_item"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/button_background">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="7dp"
                android:layout_marginStart="15dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:src="@drawable/car"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/car_service"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/convention_item"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/button_background">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="15dp"
                android:padding="11dp"
                android:src="@drawable/convention" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/convention_center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/catering_item"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/button_background">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_marginStart="15dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:src="@drawable/catering"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/catering_service"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/decoration_item"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/button_background">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_marginStart="15dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:src="@drawable/decoration"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/decoration_service"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>